--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
-	<!-- Bootstrap --><!-- Custom styles -->
+	<!-- Bootstrap --> 
 	<link rel="stylesheet" href="assets/css/min.css">
 	<!-- Icons -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/icons.css">
 	<!-- Fonts -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	<!-- Custom styles -->
