--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Icons -->
 	<link rel="stylesheet" href="assets/css/icons.css">
 	<!-- Fonts -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
+	<link rel="stylesheet" href="assets/css/font.css">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="assets/css/styles.css">
  
