--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Test</h3>
-					<p> 
+					<div class="text-center">  
 						<ul  class="btn btn-action" style= "list-style: none"> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Sunil_Gavaskar" target="_blank">Sunil Gavaskar</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Jack_Hobbs" target="_blank">Jack Hobbs</a></li> 
@@ -81,12 +81,13 @@
 							<li class="active"><a href="https://en.wikipedia.org/wiki/James_Anderson_(cricketer)" target="_blank">James Anderson</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Wasim_Akram" target="_blank">Wasim Akram</a></li>  
 						</ul> 
-					</p>
+					</div>
+					<br>
 					<p class="text-center"><a href="https://www.youtube.com/dalgyt" class="btn btn-action">Read less</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Odi</h3>
-					<p class="text-center"> 
+					<div class="text-center"> 
 						<ul  class="btn btn-action" style= "list-style: none"> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Sachin_Tendulkar" target="_blank">Sachin Tendulkar</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Rohit_Sharma" target="_blank">Rohit Sharma</a></li> 
@@ -100,12 +101,13 @@
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Glenn_McGrath" target="_blank">Glenn McGrath</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Wasim_Akram" target="_blank">Wasim Akram</a></li>  
 						</ul> 
-					</p>
+					</div>
+					<br>
 					<p class="text-center"><a href="https://www.youtube.com/dalgyt" class="btn btn-action" target="_blank">Read less</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">T20</h3>
-					<p class="text-center"> 
+					<div class="text-center"> 
 						<ul  class="btn btn-action" style= "list-style: none"> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Chris_Gayle" target="_blank">Christopher Henry Gayle</a></li>  
 							<li class="active"><a href="https://en.wikipedia.org/wiki/David_Warner_(cricketer)" target="_blank">David Warner</a></li> 
@@ -119,12 +121,13 @@
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Lasith_Malinga" target="_blank">Lasith Malinga</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Jasprit_Bumrah" target="_blank">Jasprit Bumrah</a></li>  
 						</ul> 
-					</p>
+					</div>
+					<br>
 					<p class="text-center"><a href="https://www.youtube.com/dalgyt"  target="_blank" class="btn btn-action">Read less</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">IPL</h3>
-					<p> 
+					<div class="text-center"> 
 						<ul  class="btn btn-action" style= "list-style: none"> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Chris_Gayle" target="_blank">Christopher Henry Gayle</a></li>   
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Virat_Kohli" target="_blank">Virat Kohli</a></li>   
@@ -138,7 +141,8 @@
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Lasith_Malinga" target="_blank">Lasith Malinga</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Jasprit_Bumrah" target="_blank">Jasprit Bumrah</a></li>   
 						</ul> 
-					</p>
+					</div>
+					<br>
 					<p class="text-center"><a href="https://www.youtube.com/dalgyt"  target="_blank" class="btn btn-action">Read less</a></p>
 				</div>
 			</div>
