--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<h3 class="text-center">T20</h3>
 					<div class="text-center"> 
 						<ul  class="btn btn-action" style= "list-style: none"> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Chris_Gayle" target="_blank">Christopher Henry Gayle</a></li>  
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Chris_Gayle" target="_blank">Chris Gayle</a></li>  
 							<li class="active"><a href="https://en.wikipedia.org/wiki/David_Warner_(cricketer)" target="_blank">David Warner</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Virat_Kohli" target="_blank">Virat Kohli</a></li>  
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Rohit_Sharma" target="_blank">Rohit Sharma(c)</a></li> 
@@ -125,7 +125,7 @@
 					<h3 class="text-center">IPL</h3>
 					<div class="text-center"> 
 						<ul  class="btn btn-action" style= "list-style: none"> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Chris_Gayle" target="_blank">Christopher Henry Gayle</a></li>   
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Chris_Gayle" target="_blank">Chris Gayle</a></li>   
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Virat_Kohli" target="_blank">Virat Kohli</a></li>   
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Suresh_Raina" target="_blank">Suresh Raina</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Rohit_Sharma" target="_blank">Rohit Sharma</a></li> 
