--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
 					<p class="text-center"><a href="https://www.youtube.com/dalgyt" class="btn btn-action" target="_blank">Read less</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">T20</h3>
+					<h3 class="text-center">T20I</h3>
 					<div class="text-center"> 
 						<ul  class="btn btn-action" style= "list-style: none"> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Chris_Gayle" target="_blank">Chris Gayle</a></li>  
-							<li class="active"><a href="https://en.wikipedia.org/wiki/David_Warner_(cricketer)" target="_blank">David Warner</a></li> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Virat_Kohli" target="_blank">Virat Kohli</a></li>  
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Rohit_Sharma" target="_blank">Rohit Sharma(c)</a></li> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/AB_de_Villiers" target="_blank">AB de Villiers(wk)</a></li> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Kieron_Pollard" target="_blank">Kieron Pollard</a></li> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Dwayne_Bravo" target="_blank">Dwayne Bravo</a></li> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Sunil_Narine" target="_blank">Sunil Narine</a></li> 
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Martin_Guptill" target="_blank">Martin Guptill</a></li> 
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Brendon_McCullum" target="_blank">Brendon McCullum(wk)</a></li> 
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Virat_Kohli" target="_blank">Virat Kohli</a></li>     
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Shakib_Al_Hasan" target="_blank">Shakib Al Hasan</a></li>  
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Daren_Sammy" target="_blank">Daren Sammy</a></li> 
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Shahid_Afridi" target="_blank">Shahid Afridi</a></li>  
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Rashid_Khan" target="_blank">Rashid Khan</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Lasith_Malinga" target="_blank">Lasith Malinga</a></li> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Jasprit_Bumrah" target="_blank">Jasprit Bumrah</a></li>  
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Tim_Southee" target="_blank">Tim Southee</a></li>
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Jasprit_Bumrah" target="_blank">Jasprit Bumrah</a></li> 
 						</ul> 
 					</div>
 					<br>
