--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 					<h3 class="text-center">T20I</h3>
 					<div class="text-center"> 
 						<ul  class="btn btn-action" style= "list-style: none"> 
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Rohit_Sharma" target="_blank">Rohit Sharma(c)</a></li> 
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Rohit_Sharma" target="_blank">Rohit Sharma</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Martin_Guptill" target="_blank">Martin Guptill</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Brendon_McCullum" target="_blank">Brendon McCullum(wk)</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Virat_Kohli" target="_blank">Virat Kohli</a></li>     
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Shakib_Al_Hasan" target="_blank">Shakib Al Hasan</a></li>  
-							<li class="active"><a href="https://en.wikipedia.org/wiki/Daren_Sammy" target="_blank">Daren Sammy</a></li> 
+							<li class="active"><a href="https://en.wikipedia.org/wiki/Daren_Sammy" target="_blank">Daren Sammy(c)</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Shahid_Afridi" target="_blank">Shahid Afridi</a></li>  
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Rashid_Khan" target="_blank">Rashid Khan</a></li> 
 							<li class="active"><a href="https://en.wikipedia.org/wiki/Lasith_Malinga" target="_blank">Lasith Malinga</a></li> 
